apps/api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: opendebate
spec:
  parentRefs:
    - name: eg
      namespace: argocd
      sectionName: https-dev
  hostnames:
    - dev.cab.uadebate.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api
          port: 80
